WinnerNode problem fixed, now diplays winner correctly for all total score numbers

--- a/src/App.css
+++ b/src/App.css
@@ -12,10 +12,7 @@
     background-color: #E6F2FF;
 }
 
-/* .react-flow {
-    background: #E6F2FF;
-  }
-
-.react-flow__edge{
-    background-color: blueviolet;
-  } */
+.react-flow__draggable{
+    font-size: 100px
+   
+}
